# sssd

./: .gitignore  .lgtm.yml  Makefile.am  TODO  cifs_idmap_sss.c  configure.ac  dbus-notes.txt  version.m4
common/collection/: collection.cfg.doxy.in
common/ini/: ini_config.cfg.doxy.in  no_date_footer.html
common/path_utils/: path_utils.cfg.doxy.in
common/refarray/: ref_array.cfg.doxy.in
contrib/: sssd.spec.in
contrib/fedora/: bashrc_sssd
src/: build_macros.m4  conf_macros.m4
src/confdb/: confdb.c  confdb.h  confdb_setup.c  confdb_setup.h
src/config/: SSSDConfig.py  SSSDConfigTest.py  cfg_rules.ini
src/config/SSSDConfig/: __init__.py.in  sssd_upgrade_config.py
src/config/etc/: sssd.api.conf
src/db/: sysdb.c  sysdb.h  sysdb_certmap.c  sysdb_ops.c  sysdb_private.h  sysdb_search.c  sysdb_ssh.c  sysdb_subdomains.c  sysdb_sudo.c  sysdb_sudo.h  sysdb_upgrade.c  sysdb_views.c
src/examples/: sssd.conf
src/ldb_modules/: memberof.c
src/lib/certmap/: sss_cert_content_common.c  sss_cert_content_crypto.c  sss_cert_content_nss.c  sss_certmap.c  sss_certmap.exports  sss_certmap.h  sss_certmap_attr_names.c  sss_certmap_int.h  sss_certmap_krb5_match.c
src/man/: Makefile.am  sss-certmap.5.xml  sss_groupadd.8.xml  sss_groupdel.8.xml  sss_groupmod.8.xml  sss_groupshow.8.xml  sss_override.8.xml  sss_useradd.8.xml  sss_userdel.8.xml  sss_usermod.8.xml  sssd-ad.5.xml  sssd-ifp.5.xml  sssd-kcm.8.xml  sssd-ldap.5.xml  sssd-secrets.5.xml  sssd.conf.5.xml
src/man/include/: ad_modified_defaults.xml  failover.xml
src/monitor/: monitor.c  monitor_iface_generated.c  monitor_iface_generated.h  monitor_interfaces.h  monitor_sbus.c
src/p11_child/: p11_child_nss.c  p11_child_openssl.c
src/providers/: backend.h  be_dyndns.c  child_common.c  data_provider.h  data_provider_be.c  data_provider_fo.c  data_provider_iface_generated.c  data_provider_iface_generated.h  dp_auth_util.c  dp_backend.h  dp_pam_data_util.c  fail_over.c  fail_over.h
src/providers/ad/: ad_common.c  ad_common.h  ad_gpo.c  ad_gpo_child.c  ad_id.c  ad_init.c  ad_opts.c  ad_opts.h  ad_subdomains.c  ad_subdomains.h
src/providers/data_provider/: dp.h  dp_custom_data.h  dp_iface.xml  dp_iface_backend.c  dp_iface_generated.c  dp_iface_generated.h  dp_resp_client.c  dp_responder_iface.h  dp_target_id.c
src/providers/files/: files_id.c  files_init.c  files_ops.c  files_private.h
src/providers/ipa/: hbac_evaluator.c  ipa_access.c  ipa_auth.c  ipa_common.c  ipa_common.h  ipa_dyndns.c  ipa_hbac_common.c  ipa_hbac_private.h  ipa_id.c  ipa_id.h  ipa_init.c  ipa_netgroups.c  ipa_opts.c  ipa_opts.h  ipa_s2n_exop.c  ipa_selinux.c  ipa_session.c  ipa_subdomains.c  ipa_subdomains.h  ipa_subdomains_ext_groups.c  ipa_subdomains_id.c  ipa_subdomains_server.c  ipa_sudo.c  ipa_sudo_conversion.c  selinux_child.c
src/providers/krb5/: krb5_auth.c  krb5_auth.h  krb5_become_user.c  krb5_ccache.c  krb5_ccache.h  krb5_child.c  krb5_child_handler.c  krb5_common.c  krb5_common.h  krb5_keytab.c  krb5_utils.c  krb5_utils.h  krb5_wait_queue.c
src/providers/ldap/: ldap_auth.c  ldap_child.c  ldap_common.c  ldap_common.h  ldap_id.c  ldap_init.c  ldap_opts.c  ldap_opts.h  sdap.c  sdap.h  sdap_access.c  sdap_async.c  sdap_async.h  sdap_async_accounts.c  sdap_async_connection.c  sdap_async_enum.c  sdap_async_groups.c  sdap_async_groups_ad.c  sdap_async_initgroups.c  sdap_async_initgroups_ad.c  sdap_async_nested_groups.c  sdap_async_netgroups.c  sdap_async_private.h  sdap_async_users.c  sdap_child_helpers.c  sdap_id_op.c  sdap_sudo.c  sdap_sudo.h  sdap_sudo_refresh.c  sdap_utils.c
src/providers/openshift/: openshift_access.c  openshift_auth.c  openshift_auth_tilda.c  openshift_auth_tokenreview.c  openshift_id.c  openshift_init.c  openshift_opts.c  openshift_opts.h  openshift_private.h
src/providers/proxy/: proxy.h  proxy_auth.c  proxy_child.c  proxy_id.c  proxy_init.c
src/providers/simple/: simple_access.c  simple_access_check.c
src/resolv/: async_resolv.c  async_resolv.h
src/responder/autofs/: autofssrv.c  autofssrv_cmd.c  autofssrv_dp.c
src/responder/common/: negcache.c  negcache.h  negcache_files.c  negcache_files.h  negcache_utils.c  negcache_utils.h  resp_iface.c  resp_iface.h  resp_iface.xml  resp_iface_generated.c  resp_iface_generated.h  responder.h  responder_cache.c  responder_cache.h  responder_cache_req.c  responder_cmd.c  responder_common.c  responder_dp.c  responder_get_domains.c  responder_packet.c  (+2 more)
src/sbus/: sbus_client.c  sbus_codegen  sssd_dbus.h  sssd_dbus_common.c  sssd_dbus_connection.c  sssd_dbus_private.h  sssd_dbus_properties.c  sssd_dbus_request.c  sssd_dbus_server.c
src/sss_client/: common.c  common_private.h  nss_group.c  nss_mc_common.c  nss_mc_group.c  nss_mc_initgr.c  nss_mc_passwd.c  nss_passwd.c  pam_sss.c  sss_cli.h
src/tests/: auth-tests.c  common.c  common_dom.c  dlopen-tests.c  fail_over-tests.c  krb5_child-test.c  krb5_utils-tests.c  resolv-tests.c  sbus_codegen_tests.c  sbus_codegen_tests_generated.c  sbus_codegen_tests_generated.h  sbus_tests.c  simple_access-tests.c  sysdb-tests.c  sysdb_ssh-tests.c  tcurl_test_tool.c  util-tests.c
src/tests/cwrap/: Makefile.am  become_user-tests.sh  cwrap_test_setup.sh  fake_kdc.py  mock_pam_responder.c  pam_sss-tests.sh  pam_wrapper_test_setup.sh  passwd  responder_common-tests.sh  server-tests.sh  test_become_user.c  test_krb5_child.py  test_negcache.c  test_pam_sss_common.c  test_pam_sss_common.h  test_server.c  test_usertools.c  test_wrapper_pam_sss.c  usertools-tests.sh
src/tests/cwrap/pam_services/: test_pam_sss.in  test_pam_sss_ignore.in  test_pam_sss_stack.in
src/tools/: sss_cache.c  sss_groupshow.c  sss_override.c  sss_seed.c
src/util/: authtok.c  authtok.h  become_user.c  child_common.c  debug.c  domain_info_utils.c  find_uid.c  inotify.c  mmap_cache.h  server.c  session_recording.c  sss_ini.c  sss_iobuf.c  sss_krb5.c  sss_krb5.h  sss_ldap.c  sss_ldap.h  sss_ldb_debug.c  sss_nss.c  sss_nss.h  sss_semanage.c  sss_utf8.c  tev_curl.c  tev_curl.h  usertools.c  util.c  util.h  util_creds.h  util_errors.c  util_errors.h  util_watchdog.c
(+196 files in other folders)
